--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>xxxxxx</title>
-<meta http-equiv="refresh" content="0; URL="https://fifhy.com/what-does-a-criminal-defense-attorney-do/">
+<meta http-equiv="refresh" content="0; URL='https://fifhy.com/what-does-a-criminal-defense-attorney-do/'" />
 <link rel="canonical" href="https://bob.github.io/repo/">
