--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>xxxxxx</title>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS61PdwjnXUmFywtEOASP9bSHeMRwIlEFw7MUdT3VwdrAmPy02L7x6W_s24rPrekYXuXdg&usqp=CAU" alt="bluesky">
+<meta http-equiv="refresh" content="0; URL='https://google.com'" />
 <link rel="canonical" href="https://bob.github.io/repo/">
