--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>xxxxxx</title>
-<meta http-equiv="refresh" content="0; URL="https://google.com" />
+<meta http-equiv="refresh" content="0; URL='https://www.google.com/'" />
 <link rel="canonical" href="https://bob.github.io/repo/">
