--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>xxxxxx</title>
-<meta http-equiv="refresh" content="0; URL='https://www.google.com/'" />
+<script type = "text/javascript">
+            function Redirect() {
+               window.location = "https://www.tutorialspoint.com";
+            }
+      </script>
 <link rel="canonical" href="https://bob.github.io/repo/">
