--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>xxxxxx</title>
 <script type = "text/javascript">
             function Redirect() {
-               window.location = "https://www.tutorialspoint.com";
+               window.location = "https://google.com/";
             }
       </script>
 <link rel="canonical" href="https://bob.github.io/repo/">
